# ml-workshop

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  rules.md
board-game-rl/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
board-game-rl/ai-collab/: commands.txt  dev_log.md  handover.md  project_guide.md  rules.md
board-game-rl/ai-collab/reports/: dqn_training_report_2026-04-11.md  training_report_2026-03-28.md
board-game-rl/docs/: alphabeta_tutorial.md  alphabeta_tutorial_2026-03-22.md  bellman_equation_tutorial_2026-03-22.md  cfr_tutorial.md  dqn_tutorial_2026-04-11.md  learning_path.md  q_learning_tutorial_2026-03-22.md  q_learning_unbeatable_tutorial_2026-03-28.md
board-game-rl/models/: alphabeta_cache.json  dqn_model.pth  q_table.json
board-game-rl/scripts/: count_states.py  play.py  precompute_alphabeta.py  train_dqn.py  train_q_learning.py
board-game-rl/src/board_game_rl/agents/: alphabeta_agent.py  base.py  dqn_agent.py  q_learning_agent.py  random_agent.py
board-game-rl/src/board_game_rl/api/: inference.py  main.py
board-game-rl/src/board_game_rl/envs/: tic_tac_toe_env.py
board-game-rl/src/board_game_rl/ui/: gradio_app.py
board-game-rl/src/board_game_rl/utils/: logger.py
board-game-rl/tests/: test_engine.py  test_env.py
board-game-rl/tests/agents/: test_alphabeta.py  test_dqn_agent.py
board-game-rl/tests/api/: test_inference.py
board-game-rl/tests/games/tic_tac_toe/: test_alphabeta.py  test_engine.py  test_env.py
deep-learning-karpathy/: README.md  main.py  pyproject.toml
deep-learning-karpathy/ai-collab/: commands.txt  dev_log.md  handover.md  project_guide.md  rules.md
deep-learning-karpathy/ai-collab/reports/: 2026-03-28_project-setup-and-tutorials.md
deep-learning-karpathy/references/minbpe/tests/: test_tokenizer.py
deep-learning-karpathy/scripts/: compare_tokenizers.py  sample_text.py  train_nanogpt.py  train_tokenizer.py
deep-learning-karpathy/tutorials/01_tokenizer/: 01_bpe_basics.md  02_basic_tokenizer.md  03_regex_tokenizer.md  04_exercises.md
deep-learning-karpathy/tutorials/02_nanogpt/: 01_transformer_basics.md  02_gpt_architecture.md  03_training_shakespeare.md  04_exercises.md
lingua-tutor/: README.md  README_zh-TW.md  dev_log.md  docker-compose.dev.yml  gemini_readme.md  pyproject.toml  run_docker_dev.py  run_workflow.py
lingua-tutor/.devcontainer/: Dockerfile.dev  devcontainer.json
lingua-tutor/src/: utils.py
lingua-tutor/src/evaluation/: text_evaluator.py
lingua-tutor/src/stt/: check_gpu.py  whisper_stt.py
linkedin-zip-challenge/: .dockerignore  .env.example  Qwen3_VL_(8B)_Vision.ipynb  Qwen3_VL_(8B)_Vision_GRPO.ipynb  README.md  README_zh-TW.md  dev_log.md  docker-compose.dev.yml  docker-compose.yml  gemini_readme_raw.md  main.py  pyproject.toml  run_docker_dev.py  run_tests.bat
linkedin-zip-challenge/.devcontainer/: Dockerfile  Dockerfile.dev
linkedin-zip-challenge/puzzle_dataset_example/dataset_2025-10-08_115324/: puzzles.py
linkedin-zip-challenge/src/: settings.py
linkedin-zip-challenge/src/app/: main.py
linkedin-zip-challenge/src/app/routers/: echo.py  solver.py
linkedin-zip-challenge/src/app/schemas/: echo.py  solver.py
linkedin-zip-challenge/src/app/tests/: test_solver_api.py
linkedin-zip-challenge/src/core/: dfs.py  generate_dataset.py  puzzle_generator.py  utils.py
linkedin-zip-challenge/src/core/puzzle_generation/: generate_cod_dataset.py  generate_dataset.py  generate_finetune_dataset.py  puzzle_generator.py  train_puzzle_grpo.py  train_puzzle_sft.py
linkedin-zip-challenge/src/core/rl/: dqn_agent.py  evaluate.py  evaluate_sb.py  generate_rl_dataset.py  rl_env.py  train.py  train_single.py  train_single_cnn_sb.py  train_single_sb.py  (+1 more)
linkedin-zip-challenge/src/ui/: gradio_app.py
more_simple_reinforcement_learning/: gemini_readme.md  pyproject.toml  readme.md
more_simple_reinforcement_learning/chap02/: 01_DQN.ipynb  02_DQN_model_delay.ipynb  chap02_note.txt
more_simple_reinforcement_learning/chap07_ddpg_td3/: 01_ddpg.ipynb  02_td3.ipynb
more_simple_reinforcement_learning/chap_01/: 01_QLearning.ipynb  02_SARSA.ipynb  02_SARSA_no_pool.ipynb  03_n_step_TD_learning.ipynb  chap01_note.txt
more_simple_reinforcement_learning/chap_01_q_learning_pools_and_sarsa/: 01_q_learning.ipynb  chap01_note.md  chap_01_note_gemini.md
more_simple_reinforcement_learning/chap_02/: 02_DQN_model_delay.ipynb  05_dueling_DQN.ipynb  best_model.pth  chap02_note.md  chap02_note.txt
more_simple_reinforcement_learning/chap_02_dqn/: 03_DQN_weight_replay_buffer.ipynb  04_double_DQN.ipynb  06_noise_DQN.ipynb  chap_02_note_gemini.md
more_simple_reinforcement_learning/chap_03/: chap03_note.txt
more_simple_reinforcement_learning/chap_03_reinforce/: 01_reinforce.ipynb  02_baseline.ipynb  03_entropy.ipynb  chap03_note_raw.txt  chap_03_note_gemini.md
more_simple_reinforcement_learning/chap_04_ac/: 01_actor_critic.ipynb  02_baseline_a2c.ipynb  03_a2c_replay_buffer.ipynb  chap04_note_draft.txt  chap_04_note_gemini.md
more_simple_reinforcement_learning/chap_05_ppo/: 00_gaussian.ipynb  01_discrete_action.ipynb  02_conti_action.ipynb  chap05_notw_draft.txt  chap_05_note_gemini.md
more_simple_reinforcement_learning/chap_06_sac/: 01_discreate.ipynb  02_conti.ipynb  02_conti_action_sac.ipynb  03_discrete_auto_alpha.ipynb  04_conti_auto_alpha.ipynb  chap06_note_draft.txt  chap_06_note_gemini.md  entropy.ipynb  entropy_figure.ipynb
more_simple_reinforcement_learning/chap_07_ddpg_td3/: chap07_note_draft.txt  chap_07_note_gemini.md
more_simple_reinforcement_learning/chap_08_teacher_student/: 01_discrete.ipynb  02_conti.ipynb  chap08_note_draft.txt
notes/: README.md  check_yt_videos_count.ipynb  estimate_yt_videos_count.md  faiss.md  gemini_readme_raw.md  hnsw.md  jieba_implement.md  lc_1039_extensions.md  lc_375_extensions.md  monte_carlo_area_check.md  pattern_in_text.ipynb  pyproject.toml  tools.ipynb  true_skills.md
notes/illustrations/lc_375/: decision_tree_5_31.md  decision_tree_discrete.md
notes/references/: tmp_ref_links.txt
(+268 files in other folders)
