[project]
name = "ml-workshop-devtools"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "ruff>=0.4.8",
    "isort>=5.13.2",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
]

[tool.setuptools]
py-modules = []
