[project]
name = "board-game-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.4.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "gradio>=4.44.0",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
