[project]
name = "deep-learning-karpathy"
version = "0.1.0"
description = "Deep Learning Tutorials based on Andrej Karpathy's courses (minBPE & nanoGPT)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # === Tokenizer (minBPE) ===
    "tiktoken>=0.5.0",         # OpenAI's BPE tokenizer (for GPT-4 comparison)
    "regex>=2023.0",           # regex pattern splitting (used by RegexTokenizer)

    # === nanoGPT ===
    "torch>=2.0.0",            # PyTorch deep learning framework
    "numpy>=1.24.0",           # numerical computing
    "transformers>=4.30.0",    # HuggingFace (load GPT-2 pretrained weights)
    "datasets>=2.14.0",        # HuggingFace datasets
    "tqdm>=4.60.0",            # progress bars

    # === Visualization & Notebooks ===
    "matplotlib>=3.7.0",       # plotting
    "jupyter>=1.0.0",          # Jupyter notebooks
    "ipykernel>=6.20.0",       # Jupyter kernel

    # === Dev Tools ===
    "pytest>=7.0.0",           # testing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
