[project]
name = "linkedin-zip-challenge"
version = "0.1.0"
description = "A solver for the LinkedIn Zip Challenge."
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "ortools>=9.14.6206",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "pytest-html>=4.1.1",
    "pytest-reportlog>=0.4.0",
    "sortedcontainers>=2.4.0",
]

[tool.isort]
profile = "black"