[project]
name = "ml-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gym==0.26.2",
    "ipykernel>=6.29.5",
    "matplotlib==3.8.3",
    "numpy<2.0.0",
    "pettingzoo==1.23.1",
    "pygame>=2.6.1",
    "torch==1.12.1",
    "torchvision==0.13.1",
    "torchaudio==0.12.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]


